# simulationtheory

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
data/: sample_data.csv  sample_game.json  sample_text.txt
frontend/src/app/: page.tsx
frontend/src/lib/: types.ts
python/sp26/: __init__.py  config.py  pipeline.py  types.py
python/sp26/api/: __init__.py  models.py  server.py  store.py
python/sp26/chart/: __init__.py  builder.py
python/sp26/decode/: __init__.py  decoder.py
python/sp26/embed/: __init__.py  base.py  cache.py  openai.py
python/sp26/gametheory/: __init__.py  (+3 more)
sim/backend/: agents.py  engine.py  events.py  main.py  models.py
sim/frontend/: package-lock.json  package.json  tailwind.config.ts
src/: lib.rs  types.rs
src/chart/: builder.rs  core.rs  mod.rs  ops.rs
src/gametheory/: dominance.rs  minimax.rs  mod.rs  nash.rs  payoff.rs
src/graph/: builder.rs  core.rs  mod.rs  ops.rs
src/paths/: mod.rs  search.rs  tree.rs
src/similarity/: clustering.rs  cosine.rs  euclidean.rs  mod.rs
tests/: conftest.py  test_types.py
tests/test_api/: __init__.py  test_server.py  test_store.py
tests/test_chart/: test_chart_builder.py
tests/test_decode/: test_decoder.py
tests/test_embed/: test_embedder.py
tests/test_gametheory/: test_gametheory.py  test_payoff.py
tests/test_graph/: test_graph_builder.py
tests/test_ingest/: test_ingestors.py  test_nl_ingest.py
tests/test_paths/: test_paths.py
tests/test_predict/: test_predictor.py
tests/test_randomize/: test_randomize.py
tests/test_similarity/: test_similarity.py
(+55 files in other folders)
