[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "sp26"
version = "0.1.0"
description = "Game-Theoretic Prediction Engine"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "httpx>=0.27",
    "openai>=1.12",
    "anthropic>=0.21",
    "pydantic>=2.6",
    "tiktoken>=0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "ruff>=0.3",
]

[tool.maturin]
python-source = "python"
module-name = "sp26._core"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
